# system-config-services

./: .gitignore  .hgtags  .scminfo  AUTHORS  ChangeLog  Makefile  Makefile.am  aclocal.m4  autogen.sh  config.status  configure.in  console_rules.mk  desktop_rules.mk  doc_rules.mk  doc_rules.mk.orig  git_rules.mk  intltool-merge.in  intltool.patch  po_rules.mk  polkit_rules.mk  py_rules.mk  pycheckrc  redhat-config-services.sh  scm_rules.mk  system-config-services.console  system-config-services.console.in  system-config-services.desktop.in  system-config-services.pam  system-config-services.spec  system-config-services.spec.in  system-config-services.spec.orig
.tx/: config
config/: org.fedoraproject.Config.Services.conf  org.fedoraproject.config.services.policy  org.fedoraproject.config.services.policy.0  org.fedoraproject.config.services.policy.0.in  org.fedoraproject.config.services.policy.1  org.fedoraproject.config.services.policy.1.in
docs/html/: index.html  legalnotice.html  rhdocs-man.css
man/: Makefile  Makefile.am  system-config-services.8
po/: .cvsignore  Makefile  Makefile.in.in  POTFILES.in  ar.po  ar.po.orig  as.po  ast.po  bal.po  bg.po  bg.po.orig  bn.po  bn.po.orig  bn_BD.po  bn_IN.po  bs.po  bs.po.orig  ca.po  ca.po.orig  cs.po  cs.po.orig.orig  cs.po.rej  cs_CZ.po  cy.po  da.po  da.po.orig  de.po  de.po.orig  de.po.rej  de_CH.po  el.po  en_GB.po  en_GB.po.orig  es.po  es_ES.po  et.po  fa.po  fa_IR.po  fi.po  fr.po  (+97 more)
src/: FwdZone.py  Makefile.am  async.py  asynccmd.py  checklist.py  config.py.in  dbus_proxy.py  dbus_service.py  dnsdata.py  dnsdata_base.py  gui.py  gui.py.orig  nonblockingreader.py  serviceconf.glade  serviceconf.glade.new  serviceconf.py  servicecontrol.py  serviceherders.py  servicemethods.py  services.py  servicesinfo.py  servicetab.glade  servicetab.gladep  setup.py.in  system-config-services-mechanism.py  system-config-services.glade  system-config-services.sh  util.py
src/scservices/: config.py  config.py.in
src/scservices/core/: asynccmd.py  serviceherders.py  services.py  servicesinfo.py  util.py
src/scservices/core/legacy/: services.py
src/scservices/core/systemd/: manager.py  unit.py  util.py
src/scservices/core/systemd/constants/: dbus.py  paths.py
src/scservices/dbus/: __init__.py
src/scservices/dbus/proxy/: serviceherders.py  services.py  servicesinfo.py
src/scservices/dbus/service/: __init__.py  serviceherder.py  services.py
src/scservices/dbus/service/systemd/: manager.py
src/scservices/gui/: __init__.py
