AC_INIT(system-config-services.spec.in)
AM_INIT_AUTOMAKE(system-config-services, 0.8.9)

PYTHON=python
AC_SUBST(PYTHON)

ALL_LINGUAS="ar bn bs ca cs cy da de el es et fa fi fr hi hr hu is it ja ko ms nl no pa pl pt_BR pt ru sk sl sv ta tr uk vi zh_CN zh_TW"

paths=`python <<EOF
import sys;
for p in sys.path:
   if len(p): print p
EOF`

AC_MSG_CHECKING([for your python path])
AC_SUBST(PY_PYTHONPATH)
PY_PYTHONPATH=`python2.3 <<EOF
import sys;
path=""
for p in sys.path:
   if len(p): 
	if path: path=path + p + ":" 
	else: path=p
print path;
EOF`
AC_MSG_RESULT([$PY_PYTHONPATH]);


AC_MSG_CHECKING([for compileall])

AC_SUBST(PY_COMPILEALL)
PY_COMPILEALL="/usr/lib/python2.3/compileall.pyc"
for p in $paths;do test -f "$p/compileall.pyc" && PY_COMPILEALL="$p/compileall.pyc" && break;done

if ! test -f $PY_COMPILEALL;then
	AC_MSG_ERROR([compileall.pyc not found in $PY_PYTHONPATH]);
else
	AC_MSG_RESULT([$PY_COMPILEALL]);
fi



dnl prevent to copy po/Makefile.in.in
GETTEXT_PACKAGE=system-config-services
AC_SUBST(GETTEXT_PACKAGE)
AM_GLIB_GNU_GETTEXT
AC_PROG_INTLTOOL
AC_PROG_LN_S

AC_OUTPUT([
Makefile
src/Makefile
man/Makefile
po/Makefile.in
system-config-services.spec
])
